--- a/scripts/rmd_notebooks/heart_analysis.Rmd
+++ b/scripts/rmd_notebooks/heart_analysis.Rmd
@@ -161,28 +161,39 @@ heart.list <- lapply(
 )
 ```
 ## Add kallisto counts
-```{r}
-library(SeuratDisk)
-# convert h5ad to h5seurat
+```{r message=TRUE, warning=FALSE}
+require(SeuratDisk)
 for(i in 1:nrow(meta_heart)){
-  tmp.h5 <- paste0(meta_heart$data.dir.kallisto.REO[i],"/kb_out/counts_unfiltered/adata")
-  if(!file.exists(paste0(tmp.h5,".h5seurat"))){
-    message(paste0("Converting h5seurat for",meta_heart$capture.area[i],"...\n"))
-    Convert(
-      paste0(tmp.h5,".h5ad"),
-      dest = "h5seurat",
-      overwrite = TRUE
-    )
-  }
-
   message(paste0("Loading & cleaning kallisto output for ",meta_heart$sample[i],"...\n"))
   
-  # Load h5seurat and subset out counts for sample
-  tmp.seu <- LoadH5Seurat(
-    paste0(tmp.h5,".h5seurat"),
-  ) %>% subset( # select cells
-    cells=Cells(heart.list[[i]])
-  )
+  # convert h5ad to h5seurat
+  # tmp.h5 <- paste0(meta_heart$data.dir.kallisto.REO[i],"/kb_standard/counts_unfiltered/adata")
+  # if(!file.exists(paste0(tmp.h5,".h5seurat"))){
+  #   message(paste0("Converting h5seurat for",meta_heart$capture.area[i],"...\n"))
+  #   Convert(
+  #     paste0(tmp.h5,".h5ad"),
+  #     dest = "h5seurat",
+  #     overwrite = TRUE
+  #   )
+  # }
+  # # Load h5seurat and subset out counts for sample
+  # tmp.seu <- LoadH5Seurat(
+  #   paste0(tmp.h5,".h5seurat"),
+  # ) %>% subset( # select cells
+  #   cells=Cells(heart.list[[i]])
+  # )
+  
+  tmp.seu <- ReadMtx(
+    mtx=paste0(meta_heart$data.dir.kallisto.REO[i],"/kb_standard/counts_unfiltered/cells_x_genes.mtx"),
+    cells=paste0(meta_heart$data.dir.kallisto.REO[i],"/kb_standard/counts_unfiltered/cells_x_genes.barcodes.txt"),
+    features=paste0(meta_heart$data.dir.kallisto.REO[i],"/kb_standard/counts_unfiltered/cells_x_genes.genes.txt"),
+    feature.column=1,
+    mtx.transpose = T
+  ) %>%
+    CreateSeuratObject() %>%
+    subset( # select cells
+      cells=Cells(heart.list[[i]])
+    )
   
   # Select non-zero features
   tmp.seu <- subset( 
@@ -274,19 +285,25 @@ heart.list <- lapply(
 ```{r warning=FALSE}
 
 meta_heart$h_flip<- c(
-  1,1,1,1
+  1,-1,1,-1
 )
 meta_heart$v_flip<- c(
-  1,1,1,1
+  1,1,1,-1
 )
 
-
+#TODO- Temporarily flipped the coordinates, so that sections are in the correct orientation
 heart.list <- mapply(
   FUN = function(SEU, h_flip, v_flip){
     
+    #Original code (see above #TODO)
+    # tmp <- as.matrix(cbind(
+    #   SEU@images$slice1@coordinates$row * h_flip,
+    #   SEU@images$slice1@coordinates$col * v_flip
+    # ))
+    
     tmp <- as.matrix(cbind(
-      SEU@images$slice1@coordinates$row * h_flip,
-      SEU@images$slice1@coordinates$col * v_flip
+      SEU@images$slice1@coordinates$col * h_flip,
+      SEU@images$slice1@coordinates$row * v_flip
     ))
       
     colnames(tmp) <- paste0("space_", 1:2)
@@ -310,29 +327,32 @@ heart.list <- mapply(
 ```{r}
 save(
   heart.list,
-  file = "/workdir/dwm269/totalRNA/spTotal/robjs/heart_list_v1.RData"
+  file = "/workdir/dwm269/totalRNA/spTotal/robjs/heart_list_v2.RData"
 )
 cat("Done.\n\n")
 ```
+
+
+## Save h5Seurat objects
 ```{r}
-require(SeuratDisk)
-for(i in 1:length(heart.list)){
-  tmp.filename = paste0("/workdir/dwm269/totalRNA/spTotal/pyobjs/",meta_heart$sample[i],"_v1",".h5Seurat")
-  cat(paste0("Saving ",tmp.filename,"...\n"))
-  SaveH5Seurat(
-    heart.list[[i]], 
-    filename = tmp.filename,
-    overwrite = T
-  )
-  cat("Done.\n\n")
-  
-  cat(paste0("Converting ",tmp.filename," to h5ad...\n"))
-  Convert(
-    tmp.filename, 
-    dest = "h5ad"
-  )
-  cat("Done.\n\n")
-}
+# require(SeuratDisk)
+# for(i in 1:length(heart.list)){
+#   tmp.filename = paste0("/workdir/dwm269/totalRNA/spTotal/pyobjs/",meta_heart$sample[i],"_v1",".h5Seurat")
+#   cat(paste0("Saving ",tmp.filename,"...\n"))
+#   SaveH5Seurat(
+#     heart.list[[i]], 
+#     filename = tmp.filename,
+#     overwrite = T
+#   )
+#   cat("Done.\n\n")
+#   
+#   cat(paste0("Converting ",tmp.filename," to h5ad...\n"))
+#   Convert(
+#     tmp.filename, 
+#     dest = "h5ad"
+#   )
+#   cat("Done.\n\n")
+# }
 ```
 
 # Spatially-dependent gene expression patterns
@@ -538,7 +558,7 @@ xGen.samples <- paste0(
     "Vis_yPAP_2C_xGen",
     "Vis_yPAP_3B_xGen"
   ),
-  "/kb_out/counts_unfiltered/adata"
+  "/kb_standard/counts_unfiltered/adata"
 )
 
 # convert h5ad to h5seurat
@@ -642,10 +662,14 @@ visListPlot(
   features=c("reo.log2p1","nCount_xGen.kallisto.log2p1"),
   alt.titles = c("log2(Reovirus UMIs+1)","log2(xGen Reovirus UMIs+1)"),
   colormap = "magma",
-  colormap.direction = -1
+  colormap.direction = -1,
+  colormap.same.scale = T
 )&theme(
   legend.position="right"
-)
+)&
+  coord_fixed(
+    ratio = 1.6
+  )
 ```
 
 
